--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -32,7 +32,7 @@ jobs:
       run: dotnet tool install -g dotnet-reportgenerator-globaltool
 
     - name: Make coverage report
-      run: reportgenerator "-reports:BatteryDataStreamer\BatteryDataStreamer.Test\TestResults\*\*.xml" "-targetdir:coverage"
+      run: reportgenerator "-reports:BatteryDataStreamer\TestResults\*\*.xml" "-targetdir:coverage"
     
     - name: Create coverage artifact
       uses: actions/upload-artifact@v2
